--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   
   <div class="logo-animated-wrap">
     <svg class="logo-svg" width="540" height="100" viewBox="0 0 540 100">
-      <!-- Квадратная рамка: изначально по центру, при hover - x=0, width=540 -->
-      <rect class="logo-border" x="220" y="0" width="100" height="100"/>
-      <!-- J по центру квадрата, потом уезжает влево -->
+      <!-- Рамка -->
+      <rect class="logo-border" x="0" y="0" width="540" height="100"/>
+      <!-- J — всегда по центру (начальная позиция), потом уезжает влево -->
       <text class="logo-letter letter-j" x="270" y="70"
             font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700" text-anchor="middle">J</text>
-      <!-- Остальные буквы, появляются при hover -->
-      <text class="logo-letter letter-e"   x="340" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
-      <text class="logo-letter letter-f"   x="400" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
-      <text class="logo-letter letter-f2"  x="460" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
-      <text class="logo-letter letter-dash"x="520" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">-</text>
-      <text class="logo-letter letter-s"   x="60"  y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">S</text>
-      <text class="logo-letter letter-e2"  x="120" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
-      <text class="logo-letter letter-t"   x="180" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">T</text>
+      <!-- Остальные буквы: стартуют по центру и прозрачные (opacity:0, x=270), при hover уезжают вправо/влево на места -->
+      <text class="logo-letter letter-e"   x="330" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
+      <text class="logo-letter letter-f"   x="390" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
+      <text class="logo-letter letter-f2"  x="450" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
+      <text class="logo-letter letter-dash"x="510" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">-</text>
+      <text class="logo-letter letter-s"   x="110" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">S</text>
+      <text class="logo-letter letter-e2"  x="170" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
+      <text class="logo-letter letter-t"   x="230" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">T</text>
     </svg>
   </div>
 
