--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
   </div>
   
   <div class="logo-animated-wrap">
-    <svg class="logo-svg" width="540" height="100" viewBox="0 0 540 100">
-      <!-- Рамка -->
-      <rect class="logo-border" x="0" y="0" width="540" height="100"/>
-      <!-- J — всегда по центру (начальная позиция), потом уезжает влево -->
-      <text class="logo-letter letter-j" x="270" y="70"
-            font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700" text-anchor="middle">J</text>
-      <!-- Остальные буквы: стартуют по центру и прозрачные (opacity:0, x=270), при hover уезжают вправо/влево на места -->
-      <text class="logo-letter letter-e"   x="330" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
-      <text class="logo-letter letter-f"   x="390" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
-      <text class="logo-letter letter-f2"  x="450" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
-      <text class="logo-letter letter-dash"x="510" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">-</text>
-      <text class="logo-letter letter-s"   x="110" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">S</text>
-      <text class="logo-letter letter-e2"  x="170" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
-      <text class="logo-letter letter-t"   x="230" y="70" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">T</text>
-    </svg>
+    <!-- Квадрат с J -->
+    <div class="logo-single">
+      <svg width="140" height="140" viewBox="0 0 140 140">
+        <rect x="5" y="5" width="130" height="130" rx="0" class="logo-border"/>
+        <text x="70" y="100" text-anchor="middle"
+          font-size="90" font-family="'Rubik', Arial, sans-serif" font-weight="700" class="logo-j">J</text>
+      </svg>
+    </div>
+    <!-- Прямоугольник с JEFF-SET -->
+    <div class="logo-full">
+      <svg width="540" height="100" viewBox="0 0 540 100">
+        <rect x="5" y="5" width="530" height="90" rx="0" class="logo-border"/>
+        <text x="270" y="75" text-anchor="middle"
+          font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700" class="logo-word">JEFF-SET</text>
+      </svg>
+    </div>
   </div>
 
   <main>
