--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
   <main>
     <h1>User Friendly Design/ Development</h1>
-    <h2>Heading 2</h2>
+    <h2>Wordpress</h2>
+    <h2>Shopify</h2>
     <h3>Heading 3</h3>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
