--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </div>
   
   <div class="logo-animated-wrap">
-    <!-- Квадрат с J и скругленным нижним правым углом -->
+    <!-- Квадрат с J (и скруглённым нижним правым углом) -->
     <div class="logo-single">
-      <svg width="140" height="140" viewBox="0 0 140 140">
+      <svg class="logo-svg" width="140" height="140" viewBox="0 0 140 140">
         <path class="logo-border"
           d="
             M5,5
@@ -34,7 +34,7 @@
           font-size="90" font-family="'Rubik', Arial, sans-serif" font-weight="700" class="logo-j">J</text>
       </svg>
     </div>
-    <!-- Прямоугольник с JEFF-SET -->
+    <!-- Прямоугольник с JEFF-SET (только на десктопе) -->
     <div class="logo-full">
       <svg width="540" height="140" viewBox="0 0 540 140">
         <rect x="5" y="5" width="530" height="130" rx="0" class="logo-border"/>
