--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
     <p>
-      My project on 
-      <a href="https://github.com/JEFF-SET/jeff-set.github.io" class="main-link" target="_blank">GitHub</a>,
-      Copilot – <a href="https://jeff-set.com" class="main-link" target="_blank"><b>jeff-set.com</b></a>
+      My project on GitHub, Copilot, DigitalOcean – <a href="https://jeff-set.com" class="main-link" target="_blank"><b>jeff-set.com</b></a>
     </p>
     <a href="https://jeff-set.com" class="btn" target="_blank"><b>Submit</b></a>
   </main>
