--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <svg width="540" height="140" viewBox="0 0 540 140">
         <rect x="5" y="5" width="530" height="130" rx="0" class="logo-border"/>
         <text x="270" y="105" text-anchor="middle"
-          font-size="90" font-family="'Rubik Doodle Shadow" font-weight="700" class="logo-word">JEFF-SET</text>
+          font-size="90" font-family="'Comfortaa" font-weight="700" class="logo-word">JEFF-SET</text>
       </svg>
     </div>
   </div>
