--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JEFF-SET: Theme Switch Demo</title>
+  <title>JEFF-SET: User Friendly Design/Development</title>
   <link rel="stylesheet" href="css/jeff-set.css">
   <link rel="stylesheet" href="css/logo-anim.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
