--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <svg width="540" height="140" viewBox="0 0 540 140">
         <rect x="5" y="5" width="530" height="130" rx="0" class="logo-border"/>
         <text x="270" y="105" text-anchor="middle"
-          font-size="90" font-family="'Comfortaa" font-weight="700" class="logo-word">JEFF-SET</text>
+          font-size="90" font-family="'Comfortaa" font-weight="700" class="logo-word">Jeff-Set</text>
       </svg>
     </div>
   </div>
@@ -60,7 +60,7 @@
     <a href="https://jeff-set.com" class="btn" target="_blank"><b>Submit</b></a>
   </main>
   <footer>
-    &copy; 2025 JEFF-SET &amp; Vitalii K. All rights reserved.
+    &copy; 2025 Jeff-Set &amp; Vitalii K. All rights reserved.
   </footer>
   <script src="js/jeff-set.js"></script>
 </body>
