--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Z
           " />
         <text x="70" y="105" text-anchor="middle"
-          font-size="90" font-family="'Comfortaa" font-weight="700" class="logo-j">J</text>
+          font-size="90" font-family="'Rubik" font-weight="700" class="logo-j">J</text>
       </svg>
     </div>
     <!-- Прямоугольник с JEFF-SET (только на десктопе) -->
