--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <main>
-    <h1>User Friendly Design/ Development</h1>
+    <h1>User Friendly Web Design/ Development/ Optimization</h1>
     <h2>Wordpress</h2>
     <h2>Shopify</h2>
     <h2>Cloudflare</h2>
