--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JEFF-SET: User Friendly Design/Development</title>
+  <title>JEFF-SET: Web Design/ Development/ Optimization</title>
   <link rel="stylesheet" href="css/jeff-set.css">
   <link rel="stylesheet" href="css/logo-anim.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +45,7 @@
   </div>
 
   <main>
-    <h1>User Friendly Web Design/ Development/ Optimization</h1>
+    <h1>Web Design/ Development/ Optimization</h1>
     <h2>Wordpress</h2>
     <h2>Shopify</h2>
     <h2>Cloudflare</h2>
